--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
   "license": "UNLICENSED",
   "dependencies": {
     "express": "^4.18.2"
+  },
+  "devDependencies": {
+    "@types/node": "^20.5.1"
   }
 }
