try to initialize project express

--- a/package.json
+++ b/package.json
@@ -1,20 +1,16 @@
 {
-  "name": "secured-todo",
-  "version": "0.0.1",
-  "description": "Backend for SecuredTODO app",
-  "main": "index.js",
+  "name": "backend",
+  "version": "0.0.0",
+  "private": true,
   "scripts": {
-    "test": "test"
+    "start": "node ./bin/www"
   },
-  "keywords": [
-    "todo"
-  ],
-  "author": "Kaizaro",
-  "license": "UNLICENSED",
   "dependencies": {
-    "express": "^4.18.2"
-  },
-  "devDependencies": {
-    "@types/node": "^20.5.1"
+    "cookie-parser": "~1.4.4",
+    "debug": "~2.6.9",
+    "express": "~4.16.1",
+    "http-errors": "~1.6.3",
+    "jade": "~1.11.0",
+    "morgan": "~1.9.1"
   }
 }
