--- a/package.json
+++ b/package.json
@@ -19,7 +19,13 @@
   "devDependencies": {
     "@types/express": "^4.17.17",
     "@types/node": "^20.5.1",
+    "@typescript-eslint/eslint-plugin": "^5.62.0",
     "concurrently": "^8.2.0",
+    "eslint": "^8.47.0",
+    "eslint-config-standard-with-typescript": "^37.0.0",
+    "eslint-plugin-import": "^2.28.1",
+    "eslint-plugin-n": "^16.0.1",
+    "eslint-plugin-promise": "^6.1.1",
     "nodemon": "^3.0.1",
     "typescript": "^5.1.6"
   }
